# bmw_ci_h2

./: .zuul.yaml  BUILD  MODULE.bazel  README.md  bazel-bin  bazel-h2  bazel-out  bazel-testlogs  communication_channel.py  logging_config.yaml  main.py  message_handler.py  requirements.txt
myenv/: pyvenv.cfg
playbooks/: deploy.yaml  lint.yaml  test.yaml
tests/: test_communication.py
