# MODULE.bazel
module(
    name = "bmw_h2",
    version = "1.0",
)

bazel_dep(name = "rules_python", version = "0.40.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version = "3.12",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "bmw_pip_deps",  # Changed from "pip_deps" to avoid conflict
    python_version = "3.12",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "bmw_pip_deps")